@@ -1,11 +1,10 @@
 package thelm.packagedavaritia.recipe;
 
-import java.util.Collections;
 import java.util.List;
 
 import avaritia.recipe.ITableRecipe;
-import net.minecraft.inventory.IInventory;
-import net.minecraft.item.ItemStack;
+import net.minecraft.world.Container;
+import net.minecraft.world.item.ItemStack;
 import thelm.packagedauto.api.IPackageRecipeInfo;
 
 public interface IExtremePackageRecipeInfo extends IPackageRecipeInfo {
@@ -14,13 +13,13 @@ public interface IExtremePackageRecipeInfo extends IPackageRecipeInfo {
 
 	ITableRecipe getRecipe();
 
-	IInventory getMatrix();
+	Container getMatrix();
 
 	List<ItemStack> getRemainingItems();
 
 	@Override
 	default List<ItemStack> getOutputs() {
 		ItemStack output = getOutput();
-		return output.isEmpty() ? Collections.emptyList() : Collections.singletonList(output);
+		return output.isEmpty() ? List.of() : List.of(output);
 	}
 }
